@@ -17,6 +17,8 @@ version 0.11.0-pre12:
 	* Fixed a small issue with HTML not being stripped from
 	  log files properly (Thanks, faceprint and David Stoddard)
 	* Can turn on/off Yahoo! Mail announcements
+	* Can force messages through the server for ICQ (use this if
+	  you have problems sending)
 
 version 0.11.0-pre11 (04/30/2001):
 	* Zephyr updates and additions, thanks Neil Sanchala (nsanch)
